# framework

./: .editorconfig  .eslintrc.cjs  .prettierignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml  tsconfig.json
.github/workflows/: ci.yml  docs.yml
LICENSE/: index.html
architecture/: index.html
client/: Build.js  tsconfig.json
client/contracts/: call.sol  getBalance.sol  getStorageAt.sol  getTransactionCount.sol  newFilter.sol
client/src/: glue.ts  index.html  index.ts  mocha-browser.d.ts  reporter.ts  shim-process.js  solidity.d.ts  tests.ts  util.ts  worker_chain.ts
client/src/contracts/: .gitignore
client/src/tests/: blockNumber.ts  chainId.ts  getBalance.ts  getBlockByHash.ts  getBlockByNumber.ts  getBlockTransactionCountByHash.ts  getBlockTransactionCountByNumber.ts  getTransactionByHash.ts
client/src/tests/eth/: accounts.ts  blockNumber.ts  call.ts  chainId.ts  createAccessList.ts  estimateGas.ts  getCode.ts  (+27 more)
development/: index.html
docs/: LICENSE.md  architecture.md  development.md  guide-glue.md  guide-manual.md  guide-testing.md  index.md
guide-glue/: index.html
guide-manual/: index.html
guide-testing/: index.html
server/: Build.js  tsconfig.json
server/src/: client.ts  connections.ts  index.ts
wallet-test-server/: Cargo.toml
wallet-test-server/src/: http.rs  main.rs  ws.rs
wallet-test-server/src/www/: index.html
wallet-tests/: package-lock.json  package.json  tsconfig.json  webpack.config.js
wallet-tests/src/: index.ts  tests.ts
wallet-tests/src/tests/: getBalance.ts
