[package]
name = "wallet-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["server"] }
tokio = { version = "1", features = ["full"] }
hyper-rustls = "0.23.0"
tokio-tungstenite = "0.17.2"
futures-util = "0.3.21"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
